// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KeyboardControls renders correctly when showConflict is false 1`] = `
<div>
  <div
    class="flex flex-row gap-4 items-center justify-even"
  >
    <button
      data-testid="reset"
    >
      Reset (R)
    </button>
    <button
      data-testid="new"
    >
      New Game (N)
    </button>
    <button
      data-testid="undo"
    >
      Undo (Z)
    </button>
    <button
      data-testid="toggle"
    >
      Highlight errors (E)
    </button>
  </div>
</div>
`;

exports[`KeyboardControls renders correctly when showConflict is true 1`] = `
<div>
  <div
    class="flex flex-row gap-4 items-center justify-even"
  >
    <button
      data-testid="reset"
    >
      Reset (R)
    </button>
    <button
      data-testid="new"
    >
      New Game (N)
    </button>
    <button
      data-testid="undo"
    >
      Undo (Z)
    </button>
    <button
      data-testid="toggle"
    >
      Hide errors (E)
    </button>
  </div>
</div>
`;
